@@ -1,3 +1,8 @@
+2005-03-31  Mike Kestner  <mkestner@novell.com>
+
+	* glib/ManagedValue.cs : add null/NULL guarding to Copy, Free, 
+	WrapObject, and ObjectForWrapper.  [Fixes #74197]
+
 2005-03-30  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
 	* parser/gapi2xml.pl : parse gst type macros.
